Fixed wrap and sm screen style

--- a/app/assets/stylesheets/framework/blocks.scss
+++ b/app/assets/stylesheets/framework/blocks.scss
@@ -266,11 +266,11 @@
 
   .dismiss-button {
     position: absolute;
-    right: $cycle-analytics-box-padding;
+    right: 6px;
+    top: 6px;
     cursor: pointer;
     color: $blue-300;
     z-index: 1;
-    padding-right: 5px;
     border: none;
     background-color: transparent;
 
@@ -287,11 +287,7 @@
 
   .inner-content {
     text-align: left;
-
-    @media (max-width: $screen-sm-min) {
-      padding: 0 28px;
-      text-align: center;
-    }
+    white-space: nowrap;
 
     h4 {
       color: $gl-text-color;
@@ -301,6 +297,16 @@
     p {
       color: $gl-text-color;
       margin-bottom: $gl-padding;
+    }
+  }
+
+  @media (max-width: $screen-sm-min) {
+    flex-direction: column;
+
+    .inner-content {
+      white-space: normal;
+      padding: 0 28px;
+      text-align: center;
     }
   }
 }
